	- installs the following files. Default is to not build them.
	  	from configure --with-pythonmodule:
	  /usr/lib/python2.x/site-packages/unboundmodule.py
	  	from configure --with-pyunbound:
	  /usr/lib/python2.x/site-packages/unbound.py
	  /usr/lib/python2.x/site-packages/_unbound.so*
	  The example python scripts (pythonmod/examples and
	  libunbound/python/examples) are not installed.

3 April 2009: Wouter
	- Fixed a bug that caused messages to be stored in the cache too 
	  long.  Hard to trigger, but NXDOMAINs for nameservers or CNAME
	  targets have been more vulnerable to the TTL miscalculation bug. 
	- documentation test fixed for python addition.

2 April 2009: Wouter
	- pyunbound (libunbound python plugin) compiles using libtool.
	- documentation for pythonmod and pyunbound is generated in doc/html.
	- iana portlist updated.
	- fixed bug in unbound-control flush_zone where it would not flush
	  every message in the target domain.  This especially impacted 
	  NXDOMAIN messages which could remain in the cache regardless.
	- python module test package.

1 April 2009: Wouter
	- suppress errors when trying to contact authority servers that gave
	  ipv6 AAAA records for their nameservers with ipv4 mapped contents.
	  Still tries to do so, could work when deployed in intranet.
	  Higher verbosity shows the error.
	- new libunbound calls documented.
	- pyunbound in libunbound/python. Removed compile warnings.
	  Makefile to make it.

30 March 2009: Wouter
	- Fixup LDFLAGS from libevent sourcedir compile configure restore.
	- Fixup so no non-absolute rpaths are added.
	- Fixup validation of RRSIG queries, they are let through.
	- read /dev/random before chroot
	- checkconf fix no python checks when no python module enabled.
	- fix configure, pthread first, so other libs do not change outcome.

27 March 2009: Wouter
	- nicer -h output. report linked libraries and modules.
	- prints modules in intuitive order (config file friendly).