@@ -10,6 +10,7 @@
 	  /usr/lib/python2.x/site-packages/_unbound.so*
 	  The example python scripts (pythonmod/examples and
 	  libunbound/python/examples) are not installed.
+	- python invalidate routine respects packed rrset ids and locks.
 
 3 April 2009: Wouter
 	- Fixed a bug that caused messages to be stored in the cache too 
